Package_Tools/include-C/gsl/in_arbeit/fertig/gsl_blas.pp

(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_zgerc(alpha:Tgsl_complex; X:Pgsl_vector_complex; Y:Pgsl_vector_complex; A:Pgsl_matrix_complex):longint;cdecl;external;
(* Const before type ignored *)
function gsl_blas_zher(Uplo:TCBLAS_UPLO_t; alpha:Tdouble; X:Pgsl_vector_complex; A:Pgsl_matrix_complex):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_zher2(Uplo:TCBLAS_UPLO_t; alpha:Tgsl_complex; X:Pgsl_vector_complex; Y:Pgsl_vector_complex; A:Pgsl_matrix_complex):longint;cdecl;external;
{
 * ===========================================================================
 * Prototypes for level 3 BLAS
 * ===========================================================================
  }
{
 * Routines with standard 4 prefixes (S, D, C, Z)
  }
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_sgemm(TransA:TCBLAS_TRANSPOSE_t; TransB:TCBLAS_TRANSPOSE_t; alpha:single; A:Pgsl_matrix_float; B:Pgsl_matrix_float; 
           beta:single; C:Pgsl_matrix_float):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_ssymm(Side:TCBLAS_SIDE_t; Uplo:TCBLAS_UPLO_t; alpha:single; A:Pgsl_matrix_float; B:Pgsl_matrix_float; 
           beta:single; C:Pgsl_matrix_float):longint;cdecl;external;
(* Const before type ignored *)
function gsl_blas_ssyrk(Uplo:TCBLAS_UPLO_t; Trans:TCBLAS_TRANSPOSE_t; alpha:single; A:Pgsl_matrix_float; beta:single; 
           C:Pgsl_matrix_float):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_ssyr2k(Uplo:TCBLAS_UPLO_t; Trans:TCBLAS_TRANSPOSE_t; alpha:single; A:Pgsl_matrix_float; B:Pgsl_matrix_float; 
           beta:single; C:Pgsl_matrix_float):longint;cdecl;external;
(* Const before type ignored *)
function gsl_blas_strmm(Side:TCBLAS_SIDE_t; Uplo:TCBLAS_UPLO_t; TransA:TCBLAS_TRANSPOSE_t; Diag:TCBLAS_DIAG_t; alpha:single; 
           A:Pgsl_matrix_float; B:Pgsl_matrix_float):longint;cdecl;external;
(* Const before type ignored *)
function gsl_blas_strsm(Side:TCBLAS_SIDE_t; Uplo:TCBLAS_UPLO_t; TransA:TCBLAS_TRANSPOSE_t; Diag:TCBLAS_DIAG_t; alpha:single; 
           A:Pgsl_matrix_float; B:Pgsl_matrix_float):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_dgemm(TransA:TCBLAS_TRANSPOSE_t; TransB:TCBLAS_TRANSPOSE_t; alpha:Tdouble; A:Pgsl_matrix; B:Pgsl_matrix; 
           beta:Tdouble; C:Pgsl_matrix):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_dsymm(Side:TCBLAS_SIDE_t; Uplo:TCBLAS_UPLO_t; alpha:Tdouble; A:Pgsl_matrix; B:Pgsl_matrix; 
           beta:Tdouble; C:Pgsl_matrix):longint;cdecl;external;
(* Const before type ignored *)
function gsl_blas_dsyrk(Uplo:TCBLAS_UPLO_t; Trans:TCBLAS_TRANSPOSE_t; alpha:Tdouble; A:Pgsl_matrix; beta:Tdouble; 
           C:Pgsl_matrix):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_dsyr2k(Uplo:TCBLAS_UPLO_t; Trans:TCBLAS_TRANSPOSE_t; alpha:Tdouble; A:Pgsl_matrix; B:Pgsl_matrix; 
           beta:Tdouble; C:Pgsl_matrix):longint;cdecl;external;
(* Const before type ignored *)
function gsl_blas_dtrmm(Side:TCBLAS_SIDE_t; Uplo:TCBLAS_UPLO_t; TransA:TCBLAS_TRANSPOSE_t; Diag:TCBLAS_DIAG_t; alpha:Tdouble; 
           A:Pgsl_matrix; B:Pgsl_matrix):longint;cdecl;external;
(* Const before type ignored *)
function gsl_blas_dtrsm(Side:TCBLAS_SIDE_t; Uplo:TCBLAS_UPLO_t; TransA:TCBLAS_TRANSPOSE_t; Diag:TCBLAS_DIAG_t; alpha:Tdouble; 
           A:Pgsl_matrix; B:Pgsl_matrix):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_cgemm(TransA:TCBLAS_TRANSPOSE_t; TransB:TCBLAS_TRANSPOSE_t; alpha:Tgsl_complex_float; A:Pgsl_matrix_complex_float; B:Pgsl_matrix_complex_float; 
           beta:Tgsl_complex_float; C:Pgsl_matrix_complex_float):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_csymm(Side:TCBLAS_SIDE_t; Uplo:TCBLAS_UPLO_t; alpha:Tgsl_complex_float; A:Pgsl_matrix_complex_float; B:Pgsl_matrix_complex_float; 
           beta:Tgsl_complex_float; C:Pgsl_matrix_complex_float):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_csyrk(Uplo:TCBLAS_UPLO_t; Trans:TCBLAS_TRANSPOSE_t; alpha:Tgsl_complex_float; A:Pgsl_matrix_complex_float; beta:Tgsl_complex_float; 
           C:Pgsl_matrix_complex_float):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_csyr2k(Uplo:TCBLAS_UPLO_t; Trans:TCBLAS_TRANSPOSE_t; alpha:Tgsl_complex_float; A:Pgsl_matrix_complex_float; B:Pgsl_matrix_complex_float; 
           beta:Tgsl_complex_float; C:Pgsl_matrix_complex_float):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_ctrmm(Side:TCBLAS_SIDE_t; Uplo:TCBLAS_UPLO_t; TransA:TCBLAS_TRANSPOSE_t; Diag:TCBLAS_DIAG_t; alpha:Tgsl_complex_float; 
           A:Pgsl_matrix_complex_float; B:Pgsl_matrix_complex_float):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_ctrsm(Side:TCBLAS_SIDE_t; Uplo:TCBLAS_UPLO_t; TransA:TCBLAS_TRANSPOSE_t; Diag:TCBLAS_DIAG_t; alpha:Tgsl_complex_float; 
           A:Pgsl_matrix_complex_float; B:Pgsl_matrix_complex_float):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_zgemm(TransA:TCBLAS_TRANSPOSE_t; TransB:TCBLAS_TRANSPOSE_t; alpha:Tgsl_complex; A:Pgsl_matrix_complex; B:Pgsl_matrix_complex; 
           beta:Tgsl_complex; C:Pgsl_matrix_complex):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_zsymm(Side:TCBLAS_SIDE_t; Uplo:TCBLAS_UPLO_t; alpha:Tgsl_complex; A:Pgsl_matrix_complex; B:Pgsl_matrix_complex; 
           beta:Tgsl_complex; C:Pgsl_matrix_complex):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_zsyrk(Uplo:TCBLAS_UPLO_t; Trans:TCBLAS_TRANSPOSE_t; alpha:Tgsl_complex; A:Pgsl_matrix_complex; beta:Tgsl_complex; 
           C:Pgsl_matrix_complex):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_zsyr2k(Uplo:TCBLAS_UPLO_t; Trans:TCBLAS_TRANSPOSE_t; alpha:Tgsl_complex; A:Pgsl_matrix_complex; B:Pgsl_matrix_complex; 
           beta:Tgsl_complex; C:Pgsl_matrix_complex):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_ztrmm(Side:TCBLAS_SIDE_t; Uplo:TCBLAS_UPLO_t; TransA:TCBLAS_TRANSPOSE_t; Diag:TCBLAS_DIAG_t; alpha:Tgsl_complex; 
           A:Pgsl_matrix_complex; B:Pgsl_matrix_complex):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_ztrsm(Side:TCBLAS_SIDE_t; Uplo:TCBLAS_UPLO_t; TransA:TCBLAS_TRANSPOSE_t; Diag:TCBLAS_DIAG_t; alpha:Tgsl_complex; 
           A:Pgsl_matrix_complex; B:Pgsl_matrix_complex):longint;cdecl;external;
{
 * Routines with prefixes C and Z only
  }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_chemm(Side:TCBLAS_SIDE_t; Uplo:TCBLAS_UPLO_t; alpha:Tgsl_complex_float; A:Pgsl_matrix_complex_float; B:Pgsl_matrix_complex_float; 
           beta:Tgsl_complex_float; C:Pgsl_matrix_complex_float):longint;cdecl;external;
(* Const before type ignored *)
function gsl_blas_cherk(Uplo:TCBLAS_UPLO_t; Trans:TCBLAS_TRANSPOSE_t; alpha:single; A:Pgsl_matrix_complex_float; beta:single; 
           C:Pgsl_matrix_complex_float):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_cher2k(Uplo:TCBLAS_UPLO_t; Trans:TCBLAS_TRANSPOSE_t; alpha:Tgsl_complex_float; A:Pgsl_matrix_complex_float; B:Pgsl_matrix_complex_float; 
           beta:single; C:Pgsl_matrix_complex_float):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_zhemm(Side:TCBLAS_SIDE_t; Uplo:TCBLAS_UPLO_t; alpha:Tgsl_complex; A:Pgsl_matrix_complex; B:Pgsl_matrix_complex; 
           beta:Tgsl_complex; C:Pgsl_matrix_complex):longint;cdecl;external;
(* Const before type ignored *)
function gsl_blas_zherk(Uplo:TCBLAS_UPLO_t; Trans:TCBLAS_TRANSPOSE_t; alpha:Tdouble; A:Pgsl_matrix_complex; beta:Tdouble; 
           C:Pgsl_matrix_complex):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function gsl_blas_zher2k(Uplo:TCBLAS_UPLO_t; Trans:TCBLAS_TRANSPOSE_t; alpha:Tgsl_complex; A:Pgsl_matrix_complex; B:Pgsl_matrix_complex; 
           beta:Tdouble; C:Pgsl_matrix_complex):longint;cdecl;external;
{$endif}
{ __GSL_BLAS_H__  }

implementation


end.
